Simplify schedule data handling and enhance booking services
Replaced `ScheduleRepository` with `ScheduleDetailsLoader` for dynamic scheduling data loading and introduced `ScheduleQueryService` for advanced querying. Added support for formatting booking summaries, handling seat selection, and metadata management with new utility classes such as `BookingFormatter` and `AgencyMetadataService`. Enhanced test coverage and structure for improved maintainability.